ams-backend app added

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 LibraryImplementation/webpack/node_modules
 RestApi/node_modules
 LibraryImplementation/.idea
+KongoPlugin
+RestAPI
+ams-backend/node_modules
+ams-backend/package-lock.json
