removing unnecessary files and some code cleaning

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
-LibraryImplementation/webpack/node_modules
-RestApi/node_modules
-LibraryImplementation/.idea
-LibraryImplementation/webpack/out
-dashjs-benchmark/.idea
 dashjs-benchmark/out
-*/node_modules
+dashjs-benchmark/dist
 KongoPlugin
 RestAPI
 RestAPI/node_modules
 ams-backend/node_modules
-
+*/node_modules
+*/.idea
+*/.vcode
