--- a/dashjs-benchmark/package.json
+++ b/dashjs-benchmark/package.json
@@ -57,8 +57,10 @@
     "codem-isoboxer": "0.3.5",
     "dashjs": "^2.6.4",
     "deep-equal": "^1.0.1",
+    "fingerprintjs2": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "imsc": "^1.0.0-beta.3",
+    "promise": "^8.0.1",
     "round10": "^1.0.3",
     "webpack": "^3.10.0"
   }
