--- a/ams-backend/package.json
+++ b/ams-backend/package.json
@@ -6,7 +6,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
+    "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
@@ -14,7 +14,7 @@
     "mysql": "^2.15.0",
     "mysql2": "^1.5.0",
     "pug": "2.0.0-beta11",
-    "serve-favicon": "~2.4.5",
-    "sequelize": "^4.22.8"
+    "sequelize": "^4.22.8",
+    "serve-favicon": "~2.4.5"
   }
 }
