--- a/dash-benchmark/package.json
+++ b/dash-benchmark/package.json
@@ -60,6 +60,7 @@
     "fingerprintjs2": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "imsc": "^1.0.0-beta.3",
+    "progressbar.js": "^1.0.1",
     "promise": "^8.0.1",
     "round10": "^1.0.3",
     "webpack": "^3.10.0"
