--- a/dash-benchmark/package.json
+++ b/dash-benchmark/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
     "babelify": "^6.1.0",
+    "browser-info": "^1.2.0",
     "browserify-derequire": "^0.9.4",
     "bs-html-injector": "^3.0.3",
     "bundle-collapser": "^1.2.1",
